--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,4 @@
-<h3>
-  <button>
-    <ng-container> Login </ng-container>
-  </button>
-</h3>
+<h3>Login</h3>
 
 <form [formGroup]="newLoginForm" (submit)="handleSubmit()">
   <div class="form-group">
