--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,33 +1,59 @@
-<h3>Regístrate</h3>
+<div class="register">
+  <h3>Regístrate</h3>
 
-<app-register-modal *ngIf="registerModal"> </app-register-modal>
+  <app-register-modal *ngIf="registerModal"> </app-register-modal>
 
-<form [formGroup]="newRegisterForm" (submit)="handleSubmit()">
-  <div class="form-group">
-    <label for=""
-      >Nombres
-      <input type="text" formControlName="name" required />
-    </label>
-    <label for=""
-      >Apellidos
-      <input type="text" formControlName="lastName" required />
-    </label>
-    <label for=""
-      >Edad
-      <input type="text" formControlName="age" required />
-    </label>
-    <label for=""
-      >Tiempo practicando
-      <input type="text" formControlName="timePracticing" required />
-    </label>
-    <label for=""
-      >E-mail
-      <input type="text" formControlName="email" required />
-    </label>
-    <label for=""
-      >Contraseña
-      <input type="text" formControlName="password" required />
-    </label>
-  </div>
-  <button type="submit" [disabled]="newRegisterForm.invalid">Añadir</button>
-</form>
+  <form [formGroup]="newRegisterForm" (submit)="handleSubmit()">
+    <div class="form-group">
+      <label for=""
+        >Nombre *
+        <input
+          type="text"
+          formControlName="name"
+          placeholder="Nombre"
+          required
+        />
+      </label>
+      <label for=""
+        >Apellidos *
+        <input
+          type="text"
+          formControlName="lastName"
+          placeholder="Apellidos"
+          required
+        />
+      </label>
+      <label for=""
+        >Edad
+        <input type="text" formControlName="age" placeholder="Edad" />
+      </label>
+      <label for=""
+        >Tiempo practicando
+        <input
+          type="text"
+          formControlName="timePracticing"
+          placeholder="Tiempo Practicando"
+        />
+      </label>
+      <label for=""
+        >E-mail *
+        <input
+          type="text"
+          formControlName="email"
+          placeholder="E-mail"
+          required
+        />
+      </label>
+      <label for=""
+        >Contraseña *
+        <input
+          type="text"
+          formControlName="password"
+          placeholder="Contraseña"
+          required
+        />
+      </label>
+    </div>
+    <button type="submit" [disabled]="newRegisterForm.invalid">Añadir</button>
+  </form>
+</div>
