--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -4,14 +4,7 @@ header {
   position: sticky;
   margin: 0px;
   top: 0;
-  font-family: "Cormorant", serif;
-  font-size: 0.6rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
   padding: 2rem;
-
   background-color: #e2ddcb;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 10px 25px,
     rgba(0, 0, 0, 0.22) 0px 0px 10px;
@@ -21,7 +14,20 @@ header {
   max-height: 98px;
   max-width: 500px;
   min-width: 390px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-div {
+.title {
   width: 90px;
+}
+
+.main-header {
+  font-family: "Cormorant", serif;
+  font-size: 0.6rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 500px;
+  min-width: 390px;
 }
