Update css and elements distribution

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,16 @@
 <header>
-  <div>
-    <h1>AIKIDO JOURNEY</h1>
+  <div class="main-header">
+    <div class="title">
+      <h1>AIKIDO JOURNEY</h1>
+    </div>
+    <div class="logo">
+      <img src="../../../assets/img/ai.jo.logo.png" height="58" alt="" />
+    </div>
+    <fa-icon
+      [icon]="['fas', 'bars']"
+      size="3x"
+      (click)="this.burger = !this.burger"
+    ></fa-icon>
   </div>
-  <ng-content></ng-content>
+  <ng-content *ngIf="!this.burger"></ng-content>
 </header>
