Change image format

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,7 +4,7 @@
       <h1>AIKIDO JOURNEY</h1>
     </div>
     <div class="logo">
-      <img src="../../../assets/img/ai.jo.logo.png" height="58" alt="" />
+      <img src="../../../assets/img/ai.jo.logo.webp" height="58" alt="" />
     </div>
     <fa-icon
       [icon]="['fas', 'bars']"
