--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,11 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa&display=swap");
 
 footer {
-  position: absolute;
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  bottom: 0;
+  top: 100%;
   font-family: "Comfortaa", cursive;
 
   background-color: #e2ddcb;
@@ -16,5 +17,5 @@ footer {
   width: 100vw;
   max-height: 98px;
   max-width: 500px;
-  min-width: 390px;
+  min-width: 420px;
 }
