Update CSS for core elements

--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -14,7 +14,7 @@ footer {
     rgba(0, 0, 0, 0.22) 0px 0px 10px;
 
   height: 98px;
-  width: 100vw;
+  // width: 100vw;
   max-height: 98px;
   max-width: 500px;
   min-width: 420px;
