--- a/src/app/core/menu/menu.component.scss
+++ b/src/app/core/menu/menu.component.scss
@@ -1,6 +1,40 @@
 .full-menu {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  background-color: #f0ebd9;
+  width: 100vw;
+  max-height: 98px;
+  max-width: 500px;
+  min-width: 390px;
+  display: flex;
+  justify-content: center;
   font-size: 1.25rem;
-  color: a {
+  padding: 1rem;
+  ul {
+    max-height: 98px;
+    max-width: 500px;
+    min-width: 390px;
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    flex-wrap: wrap;
+    // NO FUNCIONA grid-template-columns
+    //   display: grid;
+    // grid-gap: 10px;
+    // grid-auto-columns: auto;
+    // grid-template-columns: repeat(autofit, minmax(auto, 1fr));
+    li {
+      margin: 0.5rem;
+    }
+  }
+  a {
+    color: #7c7a70;
     text-decoration: none;
+    cursor: pointer;
+  }
+  a:hover {
+    font-size: 1.5rem;
   }
 }
