--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -1,11 +1,11 @@
 <nav>
   <div class="full-menu">
-    <ul *ngIf="loggedUser.role === 'logout'">
+    <ul *ngIf="(loggedUser$ | async)?.role === 'logout'">
       <li *ngFor="let item of items" (click)="sendToParent()">
         <a [routerLink]="item.path" [title]="item.label">{{ item.label }}</a>
       </li>
     </ul>
-    <ul *ngIf="loggedUser.role === 'user'">
+    <ul *ngIf="(loggedUser$ | async)?.role === 'user'">
       <li *ngFor="let item of itemsLogged" (click)="sendToParent()">
         <div *ngIf="item.path !== 'logout'">
           <a [routerLink]="item.path" [title]="item.label">{{ item.label }}</a>
@@ -15,7 +15,7 @@
         </div>
       </li>
     </ul>
-    <ul *ngIf="loggedUser.role === 'sensei'">
+    <ul *ngIf="(loggedUser$ | async)?.role === 'sensei'">
       <li *ngFor="let item of itemsAdmin" (click)="sendToParent()">
         <div *ngIf="item.path !== 'logout'">
           <a [routerLink]="item.path" [title]="item.label">{{ item.label }}</a>
