--- a/src/app/core/menu/menu.component.scss
+++ b/src/app/core/menu/menu.component.scss
@@ -1,21 +1,21 @@
 .full-menu {
   position: absolute;
   top: 100px;
-  left: 0;
+  right: 0;
   background-color: #f0ebd9;
   width: 100vw;
   max-height: 98px;
   max-width: 500px;
-  min-width: 390px;
+  min-width: 420px;
   display: flex;
   justify-content: center;
   font-size: 1.25rem;
-  padding: 1rem;
+  padding: 2rem;
   ul {
     max-height: 98px;
     max-width: 500px;
-    min-width: 390px;
-    padding: 0;
+    min-width: 420px;
+    padding: 1rem;
     display: flex;
     justify-content: space-evenly;
     align-content: center;
