Add firebase functionality

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -58,7 +58,7 @@
         >Imagen de perfil
         <input
           type="file"
-          (change)="uploadImage($event)"
+          (change)="saveImage($event)"
           placeholder="Imagen de perfil"
           autocomplete="off"
         />
