--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -2,5 +2,8 @@ main {
   margin: 2rem;
   min-height: 800px;
   max-width: 420px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   flex: 1 1 auto;
 }
