--- a/src/app/user-profile/user-profile.component.scss
+++ b/src/app/user-profile/user-profile.component.scss
@@ -1,4 +1,71 @@
+@import url("https://fonts.googleapis.com/css2?family=Caudex&family=Comfortaa&family=El+Messiri&display=swap");
+
+.edit-form {
+  border: none;
+}
+
 .image {
+  display: inline-block;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  border-radius: 50%;
+
+  img {
+    width: auto;
+    height: 100%;
+  }
+}
+
+.profile {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-options {
+  margin: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+h2 {
+  margin-top: 1rem;
+  display: flex;
+  color: #c71a18;
+  font-family: "Caudex", serif;
+  font-weight: 400;
   justify-content: center;
+}
+
+.line {
+  width: 249px;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #c71a18;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  button {
+    font-family: "Comfortaa", cursive;
+
+    width: 240px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgb(#e2ddcb, 0.7);
+    border: none;
+    border-radius: 5px;
+  }
+  button:enabled:hover {
+    width: 260px;
+    height: 87px;
+    font-size: 1.2rem;
+  }
 }
