--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
     <label for=""
       >Contraseña
       <input
-        type="text"
+        type="password"
         formControlName="password"
         placeholder="Contraseña"
         required
