--- a/src/app/techs-list/techs-list.component.html
+++ b/src/app/techs-list/techs-list.component.html
@@ -1,5 +1,5 @@
-<div class="technique" *ngFor="let name of techsToSearch">
-  <div *ngIf="this.techPages[name].exists">
+<ng-container *ngFor="let name of techsToSearch">
+  <div class="technique" *ngIf="techPages[name].exists">
     <h2>{{ name }}</h2>
 
     <ng-container *ngIf="techs[name] as tech">
@@ -20,4 +20,4 @@
       </div>
     </ng-container>
   </div>
-</div>
+</ng-container>
