Update html components and function for coherence

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -17,11 +17,12 @@
         style="cursor: pointer"
       ></fa-icon>
     </section>
-
-    <app-user-form
-      [userData]="userData"
-      (itSubmit)="handleUpdate($event)"
-    ></app-user-form>
+    <fieldset class="edit-form" disabled>
+      <app-user-form
+        [userData]="userData"
+        (itSubmit)="handleUpdate($event)"
+      ></app-user-form>
+    </fieldset>
     <div class="button">
       <button (click)="handleDelete()">Borrar Perfil</button>
     </div>
