Fix sonar errors

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -18,10 +18,12 @@
       ></fa-icon>
     </section>
     <fieldset class="edit-form" disabled>
-      <app-user-form
-        [userData]="userData"
-        (itSubmit)="handleUpdate($event)"
-      ></app-user-form>
+      <legend>
+        <app-user-form
+          [userData]="userData"
+          (itSubmit)="handleUpdate($event)"
+        ></app-user-form>
+      </legend>
     </fieldset>
     <div class="button">
       <button (click)="handleDelete()">Borrar Perfil</button>
