Update with correct HTML code

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -18,6 +18,7 @@
       ></fa-icon>
     </section>
     <fieldset class="edit-form" disabled>
+      <legend hidden></legend>
       <app-user-form
         [userData]="userData"
         (itSubmit)="handleUpdate($event)"
