--- a/src/app/techs-list/techs-list.component.scss
+++ b/src/app/techs-list/techs-list.component.scss
@@ -1,3 +1,39 @@
+h2 {
+  margin-top: 1rem;
+  color: #c71a18;
+  font-family: "Caudex", serif;
+  font-weight: 700;
+}
+
+.line {
+  width: 249px;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #c71a18;
+}
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+}
+
+.tech-name {
+  margin-top: 1rem;
+  display: flex;
+  color: #c71a18;
+  font-family: "Caudex", serif;
+  font-weight: 400;
+  justify-content: flex-start;
+}
+
+.tech-line {
+  width: 100%;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #c71a18;
+}
 .pages {
   margin: 1rem;
   max-width: 250px;
