--- a/src/app/users-list/users-list.component.scss
+++ b/src/app/users-list/users-list.component.scss
@@ -10,4 +10,19 @@ ul {
 }
 li {
   list-style: none;
+  display: flex;
+  align-items: center;
+  .image {
+    display: inline-block;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    border-radius: 50%;
+
+    img {
+      width: auto;
+      height: 100%;
+    }
+  }
 }
