--- a/src/app/techs-list/techs-list.component.scss
+++ b/src/app/techs-list/techs-list.component.scss
@@ -36,8 +36,12 @@ h2 {
 }
 .pages {
   margin: 1rem;
-  max-width: 250px;
+  max-width: 390px;
+  color: #c71a18;
+  font-family: "Caudex", cursive;
+  font-size: 1.5rem;
   display: flex;
+  align-content: center;
   justify-content: space-between;
 }
 ul {
@@ -60,4 +64,11 @@ li {
 }
 .paginate:hover {
   cursor: pointer;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+
+  align-items: stretch;
 }
