Add component css

--- a/src/app/techs-list/techs-list.component.scss
+++ b/src/app/techs-list/techs-list.component.scss
@@ -72,3 +72,40 @@ li {
 
   align-items: stretch;
 }
+
+.filter-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  h3 {
+    margin: 1rem;
+  }
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2rem;
+  font-size: 1.5rem;
+  font-family: "Comfortaa", sans-serif;
+
+  button {
+    width: 130px;
+    height: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(#000000, 0.7);
+    background: rgb(#e2ddcb, 0.7);
+    border: none;
+    border-radius: 5px;
+  }
+  button:enabled:hover {
+    width: 150px;
+    height: 87px;
+    color: rgb(#000000, 1);
+
+    font-size: 1.75rem;
+  }
+}
