--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 // @import "~bootstrap/dist/css/bootstrap.css";
 
-@import url("https://fonts.googleapis.com/css2?family=Caudex:wght@400;700&family=Comfortaa&family=El+Messiri&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caudex:wght@400;700&family=Darker+Grotesque&family=Comfortaa&family=El+Messiri&display=swap");
 
 *,
 *::before,
