Update register modal

--- a/src/app/utils/modals/register-modal/register-modal.component.html
+++ b/src/app/utils/modals/register-modal/register-modal.component.html
@@ -1,4 +1,4 @@
 <dialog>
-  ¡Te has registrado satisfactoriamente!
+  <h3>¡Te has registrado satisfactoriamente!</h3>
   <button (click)="closeModal()">Ir a la pantalla de login</button>
 </dialog>
