Update tech-card component

--- a/src/app/shared/tech-card/tech-card.component.html
+++ b/src/app/shared/tech-card/tech-card.component.html
@@ -6,7 +6,6 @@
     <li><span> Grado: </span> {{ tech.grade }}</li>
   </ul>
   <div class="buttons">
-    <button class="learn">Aprender</button>
-    <button class="snooze">Aplazar</button>
+    <ng-content></ng-content>
   </div>
 </div>
