Update button style and function

--- a/src/app/shared/learn-button/learn-button.component.scss
+++ b/src/app/shared/learn-button/learn-button.component.scss
@@ -9,10 +9,10 @@ button {
   border: none;
   border-radius: 4px;
 }
-// .learn {
-//   background-color: rgba(#6bca22, 0.4);
-// }
+.learn {
+  background-color: rgba(#6bca22, 0.4);
+}
 
-button:disabled {
+.learn:disabled {
   background-color: red;
 }
