--- a/src/app/shared/snooze-button/snooze-button.component.html
+++ b/src/app/shared/snooze-button/snooze-button.component.html
@@ -1,1 +1,8 @@
-<button class="snooze" (click)="handleRemoveTech(techId)">Aplazar</button>
+<button
+  class="snooze"
+  (click)="
+    $event.preventDefault(); $event.stopPropagation(); handleRemoveTech(techId)
+  "
+>
+  Aplazar
+</button>
