--- a/src/app/shared/tech-card/tech-card.component.html
+++ b/src/app/shared/tech-card/tech-card.component.html
@@ -1,4 +1,4 @@
-<div class="main-frame">
+<div class="main-frame" (click)="saveActualTech(tech)">
   <ul class="properties">
     <li><span> Ataque: </span> {{ tech.attack }}</li>
     <li><span> Técnica: </span> {{ tech.tech }}</li>
