--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -2,7 +2,7 @@
 
 header {
   position: sticky;
-  margin: 0 0 0 0px;
+  // margin: 0 0 0 0px;
   top: 0;
   padding: 2rem;
   background-color: #e2ddcb;
@@ -14,6 +14,7 @@ header {
   max-width: 500px;
   min-width: 420px;
   display: flex;
+  justify-content: center;
 }
 
 .title {
