--- a/src/app/shared/learn-button/learn-button.component.html
+++ b/src/app/shared/learn-button/learn-button.component.html
@@ -1,1 +1,8 @@
-<button class="learn" (click)="handleAddTech(techId)">Aprender</button>
+<button
+  class="learn"
+  (click)="
+    $event.preventDefault(); $event.stopPropagation(); handleAddTech(techId)
+  "
+>
+  Aprender
+</button>
