Fix image width

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -7,6 +7,7 @@
       <img
         src="../../../assets/img/ai.jo.logo.webp"
         height="58"
+        width="auto"
         alt=""
         (click)="sendToParent()"
         [routerLink]="'home'"
