Update css and properties for lighthouse

--- a/src/app/other-user-profile/other-user-profile.component.html
+++ b/src/app/other-user-profile/other-user-profile.component.html
@@ -7,6 +7,8 @@
     <img
       [src]="(this['userToDetailService'].userToDetail$ | async)?.avatar"
       alt="User avatar"
+      height="100"
+      width="auto"
     />
   </div>
 
