--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -11,6 +11,8 @@
         <img
           [src]="user.avatar ? user.avatar : '../../assets/img/no.avatar.png'"
           [alt]="user.name"
+          height="100"
+          width="auto"
         />
       </div>
 
