--- a/src/app/user-profile/user-profile.component.scss
+++ b/src/app/user-profile/user-profile.component.scss
@@ -67,3 +67,12 @@ h2 {
     font-size: 1.2rem;
   }
 }
+
+h3 {
+  font-size: 1.25rem;
+  margin-top: 1rem;
+
+  color: #c71a18;
+  font-family: "Caudex", serif;
+  font-weight: 400;
+}
