--- a/src/app/tech-details/tech-details.component.html
+++ b/src/app/tech-details/tech-details.component.html
@@ -1,6 +1,10 @@
-<h2>{{ actualTech.attack }} {{ actualTech.tech }}</h2>
-<div class="line"></div>
-<app-tech-card [tech]="actualTech"></app-tech-card>
+<div class="title">
+  <h2>{{ actualTech.attack }} {{ actualTech.tech }}</h2>
+  <div class="line"></div>
+</div>
+<div class="card">
+  <app-tech-card [tech]="actualTech"></app-tech-card>
+</div>
 <div class="video" *ngIf="actualTech.video">
   <iframe
     [title]="actualTech.attack"
@@ -13,9 +17,13 @@
 
 <div class="users-learnt">
   <h3>La han aprendido</h3>
+  <div class="line"></div>
   <ng-container *ngFor="let user of actualTech.usersLearnt">
     <div class="user">
-      <img src="user.avatar" alt="Imagen de perfil" /> {{ user.name }}
+      <div class="image">
+        <img src="{{ user.avatar }}" alt="Imagen de perfil" />
+      </div>
+      {{ user.name }}
       {{ user.lastName }} - {{ user.grade }}
     </div>
   </ng-container>
@@ -23,6 +31,7 @@
 
 <div class="users-learning">
   <h3>La están aprendiendo</h3>
+  <div class="line"></div>
   <ng-container *ngFor="let user of actualTech.usersInProgress">
     <div class="user">
       <div class="image">
