--- a/src/app/tech-details/tech-details.component.scss
+++ b/src/app/tech-details/tech-details.component.scss
@@ -1,3 +1,11 @@
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+}
+
 .user {
   list-style: none;
   display: flex;
@@ -17,4 +25,35 @@
       height: 100%;
     }
   }
+}
+
+h2 {
+  font-size: 2rem;
+  margin-top: 1rem;
+  display: flex;
+  color: #c71a18;
+  font-family: "Caudex", serif;
+  font-weight: 400;
+  justify-content: center;
+}
+
+.line {
+  width: 249px;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #c71a18;
+}
+
+h3 {
+  font-size: 1.25rem;
+  margin-top: 1rem;
+
+  color: #c71a18;
+  font-family: "Caudex", serif;
+  font-weight: 400;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
 }
